--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,19 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <!-- <h3>Ionic Menu Starter</h3>
+  <h4>Bookie Oandasan</h4> -->
 
-  <p>
+  <!-- <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  </p> -->
+  <button ion-button primary (click)='randomList()'>Daily Scrum</button>
+<div *ngIf=scrumers>
+  
+  <ul *ngFor='let scrumer of scrumers'>
+    <li> {{scrumer}}</li>
+  </ul>
+</div>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <!-- <button ion-button secondary menuToggle>Toggle Menu</button> -->
 </ion-content>
